--- a/src/app/Layout/Components/header/elements/user-box/user-box.component.html
+++ b/src/app/Layout/Components/header/elements/user-box/user-box.component.html
@@ -5,19 +5,17 @@
         <div class="widget-content-left">
           <div class="btn-group" ngbDropdown placement="bottom-right">
             <button type="button" class="btn btn-link p-0 mr-2" ngbDropdownToggle>
-              <span>
-                <div class="icon-wrapper icon-wrapper-alt rounded-circle">
-                  <img width="42" src="{{ usuario.profileImage }}"alt="" class="rounded-circle">
+              <span class="nombre" style=" position: absolute; right: 5em;line-height: 3em; ">{{ usuario.email }}</span>
+              <span>                
+                <div class="icon-wrapper icon-wrapper-alt rounded-circle">                  
+                  <img width="42" src="{{ usuario.profileImage }}" alt="{{ usuario.nombre }}" class="rounded-circle">
                 </div>
               </span>
             </button>
             <div ngbDropdownMenu>
-              <button class="dropdown-item">Menus</button>
-              <button class="dropdown-item">Settings</button>
-              <h6 class="dropdown-header">Header</h6>
-              <button class="dropdown-item">Actions</button>
+              <button routerLink="/mi-cuenta" class="dropdown-item">Mi Cuenta</button>
               <div class="dropdown-divider"></div>
-              <button class="dropdown-item">Dividers</button>
+              <button class="dropdown-item" (click)="CerrarSesion()">Salir</button>
             </div>
           </div>
         </div>
@@ -25,4 +23,3 @@
     </div>
   </div>
 </div>
-
