--- a/src/app/partes/filtros/especialista/especialista.component.html
+++ b/src/app/partes/filtros/especialista/especialista.component.html
@@ -1,19 +1,14 @@
 <form [formGroup]="FiltroForm">
-  <div class="row">
-    <div class="col-xs-12">
-      <!-- -->
-      <div class="form-group has-feedback" >
-        <label class=""><span class="glyphicon glyphicon-lock"></span>Seleccione un especialista*</label>
-        <select name="tipo" [formControl]="EspecialistaControl" (change)="Filtrar()">
-          <option *ngFor="let especialista of Especialistas | async " [ngValue]="especialista">
-            {{ especialista.usuario.Nombre  }}
-          </option>
-        </select>
-        <div *ngIf="EspecialistasInput.invalid && (EspecialistasInput.dirty || EspecialistasInput.touched )"
-          class="alert alert-danger">
-          <div *ngIf="EspecialistasInput.hasError('required')">Seleccione un especialista</div>
-        </div>
-      </div>
+  <div class="position-relative form-group">
+    <label>Especialista*</label>
+    <select name="tipo" [formControl]="EspecialistaControl" (change)="Filtrar()" class="form-control">
+      <option *ngFor="let especialista of Especialistas | async " [ngValue]="especialista">
+        {{ especialista.usuario.Nombre  }}
+      </option>
+    </select>
+    <div *ngIf="EspecialistasInput.invalid && (EspecialistasInput.dirty || EspecialistasInput.touched )"
+      class="alert alert-danger">
+      <div *ngIf="EspecialistasInput.hasError('required')">Seleccione un especialista</div>
     </div>
   </div>
 </form>
