--- a/src/app/partes/tablas/atenciones/atenciones.component.html
+++ b/src/app/partes/tablas/atenciones/atenciones.component.html
@@ -1,25 +1,40 @@
-<table>
-  <caption>Atenciones del dia {{ Dia | date:'dd-MM-yyyy' }} </caption>
-  <thead>
-    <tr>
-      <th>Horario</th>
-      <th>Paciente</th>
-      <th>Acciones</th>
-    </tr>
-  </thead> <!-- semana -->
-  <tbody>
-    <tr *ngFor="let iturnoid of Atenciones | async ">
-      <!-- Horario  mostrar  -->
-      <td class="hora">{{ iturnoid.turno.time | timestr | date:'HH:mm' }}</td>
-      <td>{{ iturnoid.turno.clienteNombre }}</td>
-      <td [ngSwitch]="AccionDisponibleMostrar(iturnoid)">
-        <button *ngSwitchCase="'vigente'" (click)="MarcarAsistencia(iturnoid)" class="btnAsistencia">Marcar Asistencia</button>
-        <button *ngSwitchCase="'vigente'" (click)="MarcarFalta(iturnoid)"  class="btnFalta" >Marcar Falta</button>
-        <span *ngSwitchCase="'resenado'" class="resenado" title="Reseña: {{ iturnoid.turno.resena}}" >Reseña</span>
-        <span *ngSwitchDefault class="nodisponible">No Asistio</span>
-      </td>
-    </tr>
-  </tbody>
-
-
-</table>
+<div class="main-card mb-3 card">
+  <div class="card-header">
+    Atenciones  para realizar el día {{ Dia   | date:'dd-MM-yyyy' }}
+  </div>
+  <div class="table-responsive">
+    <table class="align-middle mb-0 table table-borderless table-striped table-hover">
+      <thead>
+        <tr>
+          <th class="text-center">Horario</th>
+          <th class="text-center">Consultorio</th>
+          <th>Paciente</th>
+          <th class="text-center">Acciones</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let iturnoid of Atenciones | async ">
+          <td class="text-center text-muted">{{ iturnoid.turno.time | timestr | date:'HH:mm' }}</td>
+          <td class="text-center text-muted">{{ iturnoid.turno.clienteNombre }}</td>
+          <td>
+            <div class="widget-content p-0">
+              <div class="widget-content-wrapper">
+                <div class="widget-content-left mr-3">
+                </div>
+                <div class="widget-content-left flex2">
+                  <div class="widget-heading">{{ iturnoid.turno.especialistaNombre }}</div>
+                </div>
+              </div>
+            </div>
+          </td>
+          <td class="text-center" [ngSwitch]="AccionDisponibleMostrar(iturnoid)">
+            <button *ngSwitchCase="'vigente'" (click)="MarcarAsistencia(iturnoid)" class="btn btn-primary btn-sm"  >Marcar   Asistencia</button>
+            <button *ngSwitchCase="'vigente'" (click)="MarcarFalta(iturnoid)" class="btn btn-danger btn-sm" >Marcar Falta</button>
+            <span *ngSwitchCase="'resenado'" class="badge badge-success" title="Reseña: {{ iturnoid.turno.resena}}">Reseña</span>
+            <span *ngSwitchDefault class="badge badge-danger" >No Asistio</span>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
+</div>
