--- a/src/app/partes/tablas/reservas/reservas.component.html
+++ b/src/app/partes/tablas/reservas/reservas.component.html
@@ -1,31 +1,43 @@
-<table>
-  <title>Turnos Reservados</title>
-
-  <thead>
-    <tr>
-      <th>Horario</th>
-      <th>Especialista</th>
-      <th>Acciones</th>
-    </tr>
-  </thead> <!-- semana -->
-  <caption>Día {{ Dia | date:'dd-MM-yyyy' }}  </caption>
-  <tbody>
-    <tr *ngFor="let iturnoid of Reservas | async ">
-      <!-- Horario  mostrar  -->
-      <td class="hora">{{ iturnoid.turno.time | timestr | date:'dd-MM HH:mm' }}</td>
-      <td>{{ iturnoid.turno.especialistaNombre }}</td>
-      <td>
-        <app-reservas-accion
-        [clienteUID]="ClienteUID"
-        [iturnoid]="iturnoid"
-        (completarEncuesta)="CompletarEncuesta($event)"
-        (cancelarTurno)="CancelarTurno($event)"
-        >
-
-        </app-reservas-accion>
-      </td>
-    </tr>
-  </tbody>
-
-
-</table>
+<div class="main-card mb-3 card">
+  <div class="card-header">
+      Turnos Reservados para el día {{ Dia   | date:'dd-MM-yyyy' }}  
+  </div>
+  <div class="table-responsive">
+    <table class="align-middle mb-0 table table-borderless table-striped table-hover">
+      <thead>
+        <tr>
+          <th class="text-center">Horario</th>
+          <th class="text-center">Consultorio</th>
+          <th>Especialista</th>          
+          <th class="text-center">Acciones</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr *ngFor="let iturnoid of Reservas | async " >
+          <td class="text-center text-muted">{{ iturnoid.turno.time | timestr | date:'dd-MM HH:mm' }}</td>
+          <td class="text-center text-muted">{{ iturnoid.turno.consultorio }}</td>
+          <td>
+            <div class="widget-content p-0">
+              <div class="widget-content-wrapper">                
+                <div class="widget-content-left mr-3">                 
+                </div>
+                <div class="widget-content-left flex2">
+                  <div class="widget-heading">{{ iturnoid.turno.especialistaNombre }}</div>                 
+                </div>
+              </div>
+            </div>
+          </td>        
+        <td class="text-center">
+            <app-reservas-accion
+            [clienteUID]="ClienteUID"
+            [iturnoid]="iturnoid"
+            (completarEncuesta)="CompletarEncuesta($event)"
+            (cancelarTurno)="CancelarTurno($event)"
+            >
+            </app-reservas-accion>
+          </td>
+        </tr>
+      </tbody>
+    </table>
+  </div>  
+</div>
